--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Metal Menu Only
+name: Build Fixed SDK
 
 on:
   push:
@@ -11,40 +11,51 @@ jobs:
     runs-on: macos-latest
 
     steps:
+      # 1. تحميل ملفات المشروع
       - name: Checkout Source
         uses: actions/checkout@v4
         with:
           submodules: recursive
 
+      # 2. تثبيت Theos
       - name: Setup Theos
         run: |
           bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
           echo "THEOS=~/theos" >> $GITHUB_ENV
 
-      - name: Download iOS SDKs
+      # 3. تحميل SDK محدد (iOS 14.5) برابط مباشر لتجنب أخطاء Git
+      - name: Download iOS SDK (Direct Zip)
         run: |
-          git clone --depth 1 https://github.com/theos/sdks.git ~/theos/sdks
-          rm -rf ~/theos/sdks/*.sdk
+          mkdir -p ~/theos/sdks
+          cd ~/theos/sdks
+          # تحميل SDK 14.5 مباشرة (سريع ومضمون)
+          curl -L -O https://github.com/xybp888/iOS-SDKs/releases/download/iOS-14.5/iPhoneOS14.5.sdk.zip
+          # فك الضغط
+          unzip -q iPhoneOS14.5.sdk.zip
+          # حذف الملف المضغوط لتوفير المساحة
+          rm iPhoneOS14.5.sdk.zip
+          echo "✅ SDK Downloaded and Extracted Successfully"
 
+      # 4. تجهيز مكتبة Dobby
       - name: Prepare Dobby Library
         run: |
-          # Dobby تحويل الملف المرفوع باسم 
-          # libdobby.a إلى مكتبة
           if [ -f "Dobby" ]; then
             mv Dobby libdobby.a
-            echo "✅ Dobby library renamed successfully."
+            echo "✅ Dobby library ready"
           else
-            echo "⚠️ Warning: Dobby file not found! Build might fail."
+            echo "⚠️ Warning: Dobby file not found"
           fi
 
+      # 5. بناء المشروع
       - name: Build Package
         run: |
           export THEOS=~/theos
-          # تجاهل الأخطاء وبناء الحزمة
+          # تعديل الهدف ليتناسب مع SDK المحمل
           make package FINALPACKAGE=1 DEBUG=0 IGNORE_WARNINGS=1
 
-      - name: Upload Deb
+      # 6. رفع الملف الناتج
+      - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SovereignSecurity_Menu
+          name: SovereignSecurity_Fixed
           path: packages/*.deb
