--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Fixed SDK
+name: Build with Local SDK
 
 on:
   push:
@@ -11,51 +11,38 @@ jobs:
     runs-on: macos-latest
 
     steps:
-      # 1. تحميل ملفات المشروع
       - name: Checkout Source
         uses: actions/checkout@v4
         with:
           submodules: recursive
 
-      # 2. تثبيت Theos
       - name: Setup Theos
         run: |
           bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
           echo "THEOS=~/theos" >> $GITHUB_ENV
 
-      # 3. تحميل SDK محدد (iOS 14.5) برابط مباشر لتجنب أخطاء Git
-      - name: Download iOS SDK (Direct Zip)
+      # --- استخدام الـ SDK الذي رفعته أنت ---
+      - name: Setup Local SDK
         run: |
           mkdir -p ~/theos/sdks
-          cd ~/theos/sdks
-          # تحميل SDK 14.5 مباشرة (سريع ومضمون)
-          curl -L -O https://github.com/xybp888/iOS-SDKs/releases/download/iOS-14.5/iPhoneOS14.5.sdk.zip
-          # فك الضغط
-          unzip -q iPhoneOS14.5.sdk.zip
-          # حذف الملف المضغوط لتوفير المساحة
-          rm iPhoneOS14.5.sdk.zip
-          echo "✅ SDK Downloaded and Extracted Successfully"
+          # فك ضغط الملف الموجود في مجلد sdks ونقله إلى Theos
+          unzip -q sdks/iPhoneOS14.5.sdk.zip -d ~/theos/sdks/
+          echo "✅ Local SDK installed successfully"
 
-      # 4. تجهيز مكتبة Dobby
-      - name: Prepare Dobby Library
+      - name: Prepare Dobby
         run: |
           if [ -f "Dobby" ]; then
             mv Dobby libdobby.a
-            echo "✅ Dobby library ready"
-          else
-            echo "⚠️ Warning: Dobby file not found"
           fi
 
-      # 5. بناء المشروع
       - name: Build Package
         run: |
           export THEOS=~/theos
-          # تعديل الهدف ليتناسب مع SDK المحمل
+          # تجاهل الأخطاء وبناء الحزمة
           make package FINALPACKAGE=1 DEBUG=0 IGNORE_WARNINGS=1
 
-      # 6. رفع الملف الناتج
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SovereignSecurity_Fixed
+          name: SovereignSecurity_Local
           path: packages/*.deb
