--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build with Local SDK
+name: Build Auto-Download SDK
 
 on:
   push:
@@ -21,18 +21,27 @@ jobs:
           bash -c "$(curl -fsSL https://raw.githubusercontent.com/theos/theos/master/bin/install-theos)"
           echo "THEOS=~/theos" >> $GITHUB_ENV
 
-      # --- استخدام الـ SDK الذي رفعته أنت ---
-      - name: Setup Local SDK
+      # --- الحل: تحميل الـ SDK تلقائياً من رابط مضمون ---
+      - name: Download SDK Automatically
         run: |
           mkdir -p ~/theos/sdks
-          # فك ضغط الملف الموجود في مجلد sdks ونقله إلى Theos
-          unzip -q sdks/iPhoneOS14.5.sdk.zip -d ~/theos/sdks/
-          echo "✅ Local SDK installed successfully"
+          cd ~/theos/sdks
+          echo "🌐 Downloading SDK..."
+          # رابط مباشر لملف SDK 14.5
+          curl -L -o sdk.zip https://github.com/xybp888/iOS-SDKs/releases/download/iOS-14.5/iPhoneOS14.5.sdk.zip
+          
+          echo "📂 Unzipping..."
+          unzip -q sdk.zip
+          rm sdk.zip
+          echo "✅ SDK Ready!"
 
       - name: Prepare Dobby
         run: |
           if [ -f "Dobby" ]; then
             mv Dobby libdobby.a
+            echo "✅ Dobby Prepared"
+          else
+            echo "⚠️ Dobby not found"
           fi
 
       - name: Build Package
@@ -44,5 +53,5 @@ jobs:
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SovereignSecurity_Local
+          name: SovereignSecurity_Auto
           path: packages/*.deb
