--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Manual Fix
+name: Build Final Force Clean
 
 on:
   push:
@@ -16,20 +16,22 @@ jobs:
         with:
           submodules: recursive
 
-      # --- التغيير هنا: تثبيت Theos يدوياً لتجنب خطأ API ---
+      # 1. إعداد Theos
       - name: Setup Theos Manually
         run: |
-          # تحميل Theos يدوياً بدون السكريبت التلقائي
           git clone --recursive https://github.com/theos/theos.git ~/theos
           echo "THEOS=~/theos" >> $GITHUB_ENV
 
-      # --- تحميل SDKs يدوياً أيضاً ---
+      # 2. تحميل SDKs (مع التنظيف الإجباري لحل مشكلة already exists)
       - name: Setup SDKs Manually
         run: |
-          # تحميل الـ SDKs من المستودع الرسمي
+          # --- هذا هو الحل للخطأ الظاهر في الصورة ---
+          rm -rf ~/theos/sdks
+          # ----------------------------------------
+          
+          # الآن التحميل سيتم بدون مشاكل
           git clone --depth 1 https://github.com/theos/sdks.git ~/theos/sdks
           
-          # التأكد من التحميل
           if [ -d "$HOME/theos/sdks/iPhoneOS14.5.sdk" ]; then
             echo "✅ SDK Loaded Successfully"
           else
@@ -46,11 +48,10 @@ jobs:
       - name: Build Package
         run: |
           export THEOS=~/theos
-          # بناء الحزمة
           make package FINALPACKAGE=1 DEBUG=0 IGNORE_WARNINGS=1
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SovereignSecurity_Fixed
+          name: SovereignSecurity_Done
           path: packages/*.deb
