--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Final Force Clean
+name: Build with User SDK.zip
 
 on:
   push:
@@ -16,26 +16,39 @@ jobs:
         with:
           submodules: recursive
 
-      # 1. إعداد Theos
-      - name: Setup Theos Manually
+      # 1. إعداد Theos و iOS SDK (الجزء الذي يعمل بنجاح)
+      - name: Setup Theos & iOS SDK
         run: |
+          # تحميل Theos
           git clone --recursive https://github.com/theos/theos.git ~/theos
           echo "THEOS=~/theos" >> $GITHUB_ENV
-
-      # 2. تحميل SDKs (مع التنظيف الإجباري لحل مشكلة already exists)
-      - name: Setup SDKs Manually
-        run: |
-          # --- هذا هو الحل للخطأ الظاهر في الصورة ---
-          rm -rf ~/theos/sdks
-          # ----------------------------------------
           
-          # الآن التحميل سيتم بدون مشاكل
+          # تحميل iOS SDK 14.5 (الرسمي)
+          rm -rf ~/theos/sdks
           git clone --depth 1 https://github.com/theos/sdks.git ~/theos/sdks
           
-          if [ -d "$HOME/theos/sdks/iPhoneOS14.5.sdk" ]; then
-            echo "✅ SDK Loaded Successfully"
+          echo "✅ Environment Ready"
+
+      # 2. فك ضغط ملف SDK.zip الخاص بك (الذي يحتوي على lubaiios)
+      - name: Extract User SDK.zip
+        run: |
+          echo "🔍 Looking for SDK.zip..."
+          
+          if [ -f "SDK.zip" ]; then
+            echo "📦 Found SDK.zip! Extracting..."
+            # فك الضغط في المجلد الحالي
+            unzip -o -q SDK.zip
+            
+            # التحقق من وجود الملفات بعد فك الضغط
+            if [ -f "SDK/lubaiios_Basic.hpp" ]; then
+              echo "✅ Success: Found SDK/lubaiios_Basic.hpp"
+            else
+              echo "⚠️ Warning: Unzipped but specific file not found. Check folder structure inside zip."
+              ls -R SDK/ || echo "SDK folder not found"
+            fi
           else
-            echo "❌ SDK Failed"
+            echo "❌ Error: SDK.zip file not found in the repository!"
+            echo "Please upload SDK.zip to the main page."
             exit 1
           fi
 
@@ -45,9 +58,16 @@ jobs:
             mv Dobby libdobby.a
           fi
 
+      # 3. تعديل بسيط للكود (أمان فقط) لضمان المسارات
+      - name: Fix Imports (Just in case)
+        run: |
+          # إزالة ../ من metalbiew.h إذا كانت موجودة
+          sed -i 's|\.\./SDK.hpp|SDK.hpp|g' metalbiew.h || true
+
       - name: Build Package
         run: |
           export THEOS=~/theos
+          # بناء الحزمة
           make package FINALPACKAGE=1 DEBUG=0 IGNORE_WARNINGS=1
 
       - name: Upload Artifact
