--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Ultimate Fix Build
+name: Build Fix Arabic Paths
 
 on:
   push:
@@ -16,61 +16,61 @@ jobs:
         with:
           submodules: recursive
 
-      # 1. إعداد Theos و iOS SDKs (يعمل بنجاح)
-      - name: Setup Theos & SDK
+      # 1. إعداد Theos
+      - name: Setup Theos
         run: |
           git clone --recursive https://github.com/theos/theos.git ~/theos
           echo "THEOS=~/theos" >> $GITHUB_ENV
           rm -rf ~/theos/sdks
           git clone --depth 1 https://github.com/theos/sdks.git ~/theos/sdks
 
-      # 2. فك ضغط ملفاتك (الحل لملفات SDK و ImGui)
-      - name: Extract User Files
+      # 2. فك الضغط
+      - name: Extract Files
         run: |
-          # فك ضغط SDK
-          if [ -f "SDK.zip" ]; then
-            unzip -o -q SDK.zip
-            echo "✅ SDK Extracted"
-          else
-            echo "❌ Error: SDK.zip not found"
-            exit 1
-          fi
-          
-          # فك ضغط ImGui (حل مشكلة imgui.h not found)
-          if [ -f "imgui.zip" ]; then
-            unzip -o -q imgui.zip
-            echo "✅ ImGui Extracted"
-          else
-            echo "❌ Error: imgui.zip not found! Please upload it."
-            exit 1
-          fi
+          if [ -f "SDK.zip" ]; then unzip -o -q SDK.zip; fi
+          if [ -f "imgui.zip" ]; then unzip -o -q imgui.zip; fi
 
       - name: Prepare Dobby
         run: |
-          if [ -f "Dobby" ]; then
-            mv Dobby libdobby.a
-          fi
+          if [ -f "Dobby" ]; then mv Dobby libdobby.a; fi
 
-      # 3. الحل السحري للأخطاء البرمجية (Suppress Errors)
-      # هذا الأمر يعدل ملف Makefile ليجبر الكومبايلر على تجاهل الأخطاء وبناء الملف
-      - name: Patch Makefile to Ignore Errors
+      # --- 3. الخطوة الحاسمة: إصلاح مشكلة المجلد العربي ---
+      - name: Fix Arabic Folder Paths
         run: |
-          echo "🔧 Patching Makefile..."
-          # إضافة تعليمات لتجاهل الأخطاء (حل مشكلة المؤشرات والمصفوفات)
-          echo "SovereignSecurity_CCFLAGS += -w -Wno-error" >> Makefile
-          echo "SovereignSecurity_CFLAGS += -w -Wno-error" >> Makefile
+          echo "🔍 Searching for UserInfoManager.h..."
           
-          # إصلاح مسار الاستدعاء في metalbiew.h احتياطياً
-          sed -i '' 's|\.\./SDK.hpp|SDK.hpp|g' metalbiew.h || true
+          # البحث عن مكان الملف الحقيقي
+          FILE_PATH=$(find . -name "UserInfoManager.h" | head -n 1)
+          
+          if [ -z "$FILE_PATH" ]; then
+            echo "❌ Fatal Error: UserInfoManager.h not found in any folder!"
+            exit 1
+          else
+            DIR_PATH=$(dirname "$FILE_PATH")
+            echo "✅ Found file in: $DIR_PATH"
+            
+            # إضافة المسار الصحيح إلى Makefile لكي يراه الكومبايلر
+            echo "SovereignSecurity_CFLAGS += -I$DIR_PATH" >> Makefile
+            echo "SovereignSecurity_CCFLAGS += -I$DIR_PATH" >> Makefile
+            
+            # تعديل الكود في metalbiew.mm ليحذف المسار الطويل المعطوب
+            # سيحول الاستدعاء من "PUBG/ø¬ø™/UserInfoManager.h" إلى "UserInfoManager.h" فقط
+            echo "🔧 Patching import path in metalbiew.mm..."
+            sed -i '' 's|#import "PUBG/.*.h"|#import "UserInfoManager.h"|g' metalbiew.mm || true
+            
+            # إصلاحات إضافية للملفات الأخرى
+            sed -i '' 's|\.\./SDK.hpp|SDK.hpp|g' metalbiew.h || true
+          fi
 
       - name: Build Package
         run: |
           export THEOS=~/theos
-          # استخدام GO_EASY_ON_ME وتجاهل التحذيرات
+          # تجاهل الأخطاء الصارمة وبناء الحزمة
+          echo "SovereignSecurity_CFLAGS += -w -Wno-error" >> Makefile
           make package FINALPACKAGE=1 DEBUG=0 GO_EASY_ON_ME=1 IGNORE_WARNINGS=1
 
       - name: Upload Artifact
         uses: actions/upload-artifact@v4
         with:
-          name: SovereignSecurity_Final
+          name: SovereignSecurity_Done
           path: packages/*.deb
