--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Keep Zips Safe
+name: Build Force Flatten
 
 on:
   push:
@@ -16,64 +16,56 @@ jobs:
         with:
           submodules: recursive
 
-      # 1. تجهيز Theos و SDK الرسمي (بدون لمس ملفاتك)
-      - name: Setup Theos & SDK
+      # 1. تجهيز Theos
+      - name: Setup Theos
         run: |
           git clone --recursive https://github.com/theos/theos.git ~/theos
           echo "THEOS=~/theos" >> $GITHUB_ENV
           rm -rf ~/theos/sdks
           git clone --depth 1 https://github.com/theos/sdks.git ~/theos/sdks
 
-      # 2. استخراج الكود فقط (بدون المجلدات المعطوبة)
-      # هذا الأمر يسحب الملفات من داخل الـ zip ويضعها في الخارج مباشرة
-      - name: Extract Source Code Only
+      # 2. فك الضغط وإخراج الملفات من المجلدات (الحل لمشكلتك)
+      - name: Extract and Flatten All Files
         run: |
-          echo "🛡️ Extracting source files safely..."
+          echo "💥 Unzipping everything..."
+          # فك ضغط كل الملفات الموجودة مهما كان اسمها
+          unzip -q -o "*.zip" || true
           
-          # استخراج ملفات الكود من 1.zip (مثل metalbiew.mm) وتجاهل المجلدات
-          if [ -f "1.zip" ]; then unzip -j -o "1.zip" "*.mm" "*.h" "*.cpp" -d .; fi
+          echo "🚜 Moving all files to root directory..."
+          # هذا الأمر يبحث عن أي ملف .mm أو .cpp أو .h داخل أي مجلد ويسحبه للخارج
+          find . -type f \( -name "*.mm" -o -name "*.cpp" -o -name "*.m" -o -name "*.h" -o -name "*.hpp" \) -exec mv -f {} . \;
           
-          # استخراج ملفات HOST7
-          if [ -f "HOST7.zip" ]; then unzip -j -o "HOST7.zip" "*.mm" "*.h" "*.m" -d .; fi
+          # مسح المجلدات الفارغة (اختياري) للتنظيف
+          find . -type d -empty -delete
           
-          # استخراج ملفات KittyMemory
-          if [ -f "KittyMemory.zip" ]; then unzip -j -o "KittyMemory.zip" "*.cpp" "*.hpp" -d .; fi
-          
-          # استخراج ملفات منع الحظر (防禁令)
-          if [ -f "防禁令.zip" ]; then unzip -j -o "防禁令.zip" "*.mm" "*.h" -d .; fi
-
-          # استخراج Framework (يجب أن يبقى بمجلداته)
-          if [ -f "MetalPerformanceCore.framework.zip" ]; then unzip -q -o "MetalPerformanceCore.framework.zip"; fi
-
-          echo "✅ Source extracted, Zips kept safe."
+          echo "✅ All files are now in the main folder."
+          ls -F # لعرض الملفات والتأكد
 
       - name: Prepare Dobby
         run: |
-          # محاولة إيجاد Dobby أو استخدام بديل إذا لم يتوفر
-          if [ -f "Dobby" ]; then 
-            mv Dobby libdobby.a
-          else
-            # إنشاء ملف وهمي لتجاوز الخطأ إذا لم ترفعه
-            touch libdobby.a
-          fi
+          if [ -f "Dobby" ]; then mv Dobby libdobby.a; fi
+          if [ ! -f "libdobby.a" ]; then echo "⚠️ Dobby missing but continuing..."; fi
 
-      # 3. تعديل ملفات الاستدعاء (لأننا أخرجنا الملفات من المجلدات)
+      # 3. إصلاح الكود ليقرأ الملفات من جانب بعضها
       - name: Fix Imports
         run: |
-          # حذف أي مسار مجلد يسبق اسم الملف لأننا جعلنا الملفات كلها في الخارج
-          # سيحول #import "HOST7/hookURL.h" إلى #import "hookURL.h"
-          sed -i '' 's|#import ".*/\(.*\)"|#import "\1"|g' *.mm *.h *.m || true
-          sed -i '' 's|#include ".*/\(.*\)"|#include "\1"|g' *.mm *.h *.m || true
+          # بما أننا سحبنا كل الملفات للخارج، يجب حذف أسماء المجلدات من الكود
+          # مثلاً يحول #import "HOST7/lanjie.h" إلى #import "lanjie.h"
+          # ويصلح المسارات العربية المعقدة
+          sed -i '' 's|#import ".*/|#import "|g' *.mm *.h *.m || true
+          sed -i '' 's|#include ".*/|#include "|g' *.mm *.h *.m *.cpp *.hpp || true
           
-          # إجبار التوافق مع SDK
-          echo "SovereignSecurity_CCFLAGS += -std=c++17" >> Makefile
+          # إصلاح خاص لـ metalbiew.h ليكون بجانب SDK.hpp
+          sed -i '' 's|\.\./SDK.hpp|SDK.hpp|g' metalbiew.h || true
 
+      # 4. بناء المشروع
       - name: Build Package
         run: |
           export THEOS=~/theos
-          # تجاهل الأخطاء الصارمة وبناء الحزمة
+          
+          # تعديل Makefile ليقبل المسارات الجديدة وتجاهل الأخطاء
           echo "SovereignSecurity_CFLAGS += -w -Wno-error -I." >> Makefile
-          echo "SovereignSecurity_LDFLAGS += -F. -framework MetalPerformanceCore" >> Makefile
+          echo "SovereignSecurity_CCFLAGS += -w -Wno-error -I." >> Makefile
           
           make package FINALPACKAGE=1 DEBUG=0 GO_EASY_ON_ME=1 IGNORE_WARNINGS=1
 
